# liserk-encrypt

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile_CA  Dockerfile_server  LICENSE  README.md  docker-compose.yml  justfile  rustfmt.toml  todo.md
.github/: dependabot.yml
.github/workflows/: check.yml  ci.yml  safety.yml  scheduled.yml  test.yml
certificate_authority/: Cargo.toml  test.txt
certificate_authority/config/: example.toml
certificate_authority/src/: certificate.rs  error.rs  main.rs  settings.rs
client/: Cargo.toml
client/src/: error.rs  lib.rs  main.rs  stream.rs
ope/: Cargo.toml  readme.md
ope/src/: hgd.rs  lib.rs  main.rs  ope.rs  simplified_version.rs  stat.rs  test.rs  test_stats.rs
server/: Cargo.toml
server/src/: command.rs  config.rs  insert.rs  lib.rs  main.rs  message.rs  message_parsing.rs  mutation.rs  query_engine.rs
server/tests/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs  message.rs  message_type.rs  query.rs
src/: client_test.rs  lib.rs  main.rs  message.rs
test_c/: main.c
test_connection/: Cargo.toml
test_connection/tests/: integration_test.rs
tests/: lib.rs
