[package]
name = "liserk-encrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client_test.rs"

[dependencies]
tikv-client = "0.1.0"
tokio = { version = "1.28", features = ["full"] }
tfhe = { version = "*", features = ["boolean", "shortint", "integer", "aarch64-unix"] }
config = "0.13.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
aes-gcm-siv = "0.11.1"
