[package]
name = "liserk-encrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tikv-client = "0.1.0"
tokio = { version = "1.28", features = ["full"] }
config = "0.13.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
aes-gcm-siv = "0.11.1"
serde_cbor = "0.11.2"
tracing = "0.1.37"
futures = "0.3.28"
tracing-subscriber = "0.3.17"
pqc_kyber = "0.6.0"
rand = "0.8.5"
