[package]
name = "certificate_authority"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/SwannHERRERA/liserk-encrypt"
license-file = "../LICENSE"
description = "certificate authority for kyber encryption"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
color-eyre = "0.6.2"
pqc_kyber = "0.6.0"
rand = "0.8.5"
thiserror = "1.0.40"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
aes-gcm-siv = "0.11.1"
config = { version = "0.13.3", features = ["toml"] }
serde = "1.0.163"
pqcrypto-falcon = "0.2.10"
toml = "0.8.2"
lazy_static = "1.4.0"
tokio = { version = "1.28.2", features = ["full"] }
axum = "0.6.18"
tower-http = { version = "0.4.0", features = [
    "trace",
    "compression-br",
    "propagate-header",
    "sensitive-headers",
    "cors",
] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
