[package]
name = "liserk-client"
version = "0.2.2"
edition = "2021"
repository = "https://github.com/SwannHERRERA/liserk-encrypt"
license-file = "../LICENSE"
description = "Client for liserk zero knowledge database"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
pqc_kyber = "0.6.0"
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_cbor = "0.11.2"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
liserk-shared = { path = "../shared" }
liserk-ope =  { version = "0.1" }
aes-gcm-siv = "0.11.1"
getrandom = "0.2.10"
