[package]
name = "liserk-ope"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/SwannHERRERA/liserk-encrypt"
license-file = "../LICENSE"
description = "OPE (order preserving encryption) algorithms for liserk zero knowledge database"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rug = "1.19.2"
