[package]
name = "liserk-server"
version = "0.1.0"
readme = "../README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tikv-client = { git = "https://github.com/SwannHERRERA/client-rust", tag = "0.1.1" }
tokio = { version = "1.28", features = ["full"] }
config = "0.13.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
aes-gcm-siv = "0.11.1"
serde_cbor = "0.11.2"
tracing = "0.1.37"
futures = "0.3.28"
tracing-subscriber = "0.3.17"
pqc_kyber = "0.7.0"
rand = "0.8.5"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
liserk-shared = { path = "../shared" }
rayon = "1.7.0"
num_cpus = "1.15.0"
async-channel = "1.8.0"
rug = "1.19.2"
