[package]
name = "liserk-shared"
version = "0.1.7"
edition = "2021"
repository = "https://github.com/SwannHERRERA/liserk-encrypt"
license-file = "../LICENSE"
readme = "../README.md"
description = "Types for liserk zero knowledge database"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.96"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
