[package]
name = "test_connection"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
integration-tests = []

[dependencies]
liserk-shared = { path = "../shared" }
liserk-server = { path = "../server" }
liserk-client = { path = "../client" }
tokio = { version = "1.28.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
serial_test = "2.0.0"
